# VeriFrame

./: .editorconfig  .gitignore  LICENSE  README.md  environment.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: app_paths.rs  errors.rs  lib.rs  logging.rs  main.rs  state.rs
apps/desktop-tauri/src-tauri/tests/: path_guard_tests.rs  settings_commands_tests.rs  sidecar_tests.rs
engine/veriframe_core/: README.md  pyproject.toml
engine/veriframe_core/tests/: conftest.py  test_analysis_pipeline.py  test_audit_receipt.py  test_cli.py  test_config.py  test_contracts.py  test_database_migrations.py  test_device.py  test_doctor_checks.py  test_doctor_logs.py  test_file_validator.py  test_finding_builder.py  test_health_api.py  test_html_exporter.py  test_html_exporter_evidence_map_contract.py  test_image_loader.py  test_model_registry.py  test_output_parsers.py  test_overlay_renderer.py  test_quality.py  test_region_merger.py  test_report_builder.py  test_thresholding.py  test_warmup.py
engine/veriframe_core/veriframe_core/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_config.py  version.py
engine/veriframe_core/veriframe_core/api/: auth.py  routes_analysis.py  routes_doctor.py  routes_health.py  routes_models.py  routes_reports.py  routes_review.py  routes_settings.py  server.py
engine/veriframe_core/veriframe_core/audit/: __init__.py  audit_logger.py  audit_receipt.py  signing.py
engine/veriframe_core/veriframe_core/contracts/: __init__.py  analysis.py  report.py  storage.py
engine/veriframe_core/veriframe_core/datasets/: __init__.py  annotation_schema.py  registry.py  visual_audit_dataset.py
engine/veriframe_core/veriframe_core/doctor/: __init__.py  checks.py  system_info.py
engine/veriframe_core/veriframe_core/evidence/: __init__.py  evidence_map.py  overlay_renderer.py  region_cropper.py
engine/veriframe_core/veriframe_core/explainability/: __init__.py  finding_builder.py  rationale_templates.py  severity.py
engine/veriframe_core/veriframe_core/importing/: __init__.py  file_validator.py  hash_utils.py  image_loader.py  metadata_extractor.py  thumbnailer.py
engine/veriframe_core/veriframe_core/inference/: __init__.py  base.py  (+6 more)
(+205 files in other folders)
