[package]
name = "veriframe-desktop"
version = "0.1.0"
description = "VeriFrame desktop shell and secure native boundary."
authors = ["Kairais Tech"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77"

[package.metadata]
# Reserved for Tauri/build tooling metadata. Keeping this table present avoids
# noisy build-script warnings on some Tauri v2 toolchain combinations.

[lib]
name = "veriframe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "veriframe-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
open = "5.3"
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.6.0", features = [] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["io-util", "process", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.15"
